---
version: 0.21
date:    Mon Sep 12 11:16:31 CEST 2011
changes:
- Add Mo::Design pod
- Remove multiple inheritance
- Released from Liz++ and Wendy++ kitchen
---
version: 0.20
date:    Sun Sep 11 11:58:51 CEST 2011
changes:
- mv bin/compress to script/compress.pl
---
version: 0.19
date:    Sun Sep 11 11:27:14 CEST 2011
changes:
- Squish!
---
version: 0.18
date:    Sun Sep 11 09:52:30 CEST 2011
changes:
- Don't pollute namspace with _ (or anything)
---
version: 0.17
date:    Sun Sep 11 03:24:17 CEST 2011
changes:
- Call BUILD sequence properly
---
version: 0.16
date:    Sun Sep 11 01:31:30 CEST 2011
changes:
- extends can handle multiple parents
---
version: 0.15
date:    Sat Sep 10 23:40:23 CEST 2011
changes:
- extends did load parent module. fixed.
---
version: 0.14
date:    Sat Sep 10 22:25:40 CEST 2011
changes:
- Make default called on exists rather than undef
- Add builder. Very cheap to do so.
---
version: 0.13
date:    Fri Sep  9 19:15:05 CEST 2011
changes:
- dams++ adds 'default' for 'has'
---
version: 0.12
date:    Fri Sep  9 07:52:13 CEST 2011
changes:
- dams++ golfing
- Upgrade docs
---
version: 0.11
date:    Thu Sep  8 15:36:35 CEST 2011
changes:
- Move doc from pm to pod
---
version: 0.10
date:    Thu Sep  8 15:24:03 CEST 2011
changes:
- First Release