@@ -1,3 +1,4 @@
+- change default base class to Mo::O to avoid inheriting import() method
 ---
 version: 0.21
 date:    Mon Sep 12 11:16:31 CEST 2011
